tests/ui/error-codes/E0528.stderr
error[E0528]: pattern requires at least 3 elements but array has 2
  --> $DIR/E0528.rs:4:10
   |
LL |         &[a, b, c, rest @ ..] => {
   |          ^^^^^^^^^^^^^^^^^^^^ pattern cannot match array of 2 elements

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0528`.
